Fix bux with grid size happening on firefox
I changed the pixels's width and height to relative units

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     border-radius: 20px;
     margin: 1px 1px;
     background-color: #89CFF0;
-    box-shadow: 0 0 20px;
+    box-shadow: 0 0 30px;
 }
 
 .buttonBelow {
